syntax = "proto3";

package order.v1;

option go_package = "cex-core-api/gen/order/v1;order_v1";

import "google/protobuf/timestamp.proto";
import "order/v1/messages.proto";

message GetSupportedPairsResponse {
  repeated MarketPair pairs = 1;
}

message MarketPair {
  string pair = 1;                       // e.g., BTC-USDT
  string market_id = 2;
  string token_a_id = 3;
  string token_b_id = 4;
  string type = 5;                       // spot, futures, etc.
  bool is_active = 6;
  double min_order_amount = 7;
  google.protobuf.Timestamp started_at = 8;
}

message GetOrderPairResponse {
  MarketPair pair = 1;
  double price = 2;
  double volume = 3;
}

message GetOrderPairChartResponse {
  string chart_url = 1;
}

message GetOrderHistoryResponse {
  repeated Order orders = 1;
}

message Order {
  string order_id = 1;
  string market_id = 2;
  string account_id = 3;
  OrderType order_type = 4;
  OrderMethod order_method = 5;
  double price = 6;
  double amount = 7;
  double amount_filled = 8;
  OrderStatus status = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp filled_at = 11;
  google.protobuf.Timestamp expires_at = 12;
}

message CreateOrderResponse {
  string order_id = 1;
  google.protobuf.Timestamp created_at = 2;
  OrderStatus status = 3;
}


message CancelOrderResponse {
  string order_id = 1;
  bool success = 2;
  string message = 3;
}

message UpdateOrderResponse {
  string order_id = 1;
  Order updated_order = 2;
}

message StreamOrderUpdatesResponse {
  string order_id = 1;
  OrderEvent type = 2;
  double amount_change = 3;
  google.protobuf.Timestamp created_at = 4;
}

message StreamOrderBookResponse {
  string pair = 1;
  repeated OrderBookEntry asks = 2;
  repeated OrderBookEntry bids = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message OrderBookEntry {
  double price = 1;
  double quantity = 2;
}
